# web-rs/src/main/java/com/dwalczak/newsreader/rs/model/FieldError.java
@@ -1,55 +1,48 @@
 package com.dwalczak.newsreader.rs.model;
 
 import java.util.Objects;
-import com.dwalczak.newsreader.rs.model.FieldError;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
-import java.util.ArrayList;
-import java.util.List;
 import org.springframework.validation.annotation.Validated;
 import javax.validation.Valid;
 import javax.validation.constraints.*;
 
 /**
- * Error
+ * FieldError
  */
 @Validated
 
-public class Error   {
-  @JsonProperty("errorCode")
-  private String errorCode = null;
+public class FieldError   {
+  @JsonProperty("field")
+  private String field = null;
 
   @JsonProperty("message")
   private String message = null;
 
-  @JsonProperty("fields")
-  @Valid
-  private List<FieldError> fields = null;
-
-  public Error errorCode(String errorCode) {
-    this.errorCode = errorCode;
+  public FieldError field(String field) {
+    this.field = field;
     return this;
   }
 
   /**
-   * Get errorCode
-   * @return errorCode
+   * Get field
+   * @return field
   **/
   @ApiModelProperty(required = true, value = "")
   @NotNull
 
 
-  public String getErrorCode() {
-    return errorCode;
+  public String getField() {
+    return field;
   }
 
-  public void setErrorCode(String errorCode) {
-    this.errorCode = errorCode;
+  public void setField(String field) {
+    this.field = field;
   }
 
-  public Error message(String message) {
+  public FieldError message(String message) {
     this.message = message;
     return this;
   }
@@ -70,35 +63,6 @@ public class Error   {
     this.message = message;
   }
 
-  public Error fields(List<FieldError> fields) {
-    this.fields = fields;
-    return this;
-  }
-
-  public Error addFieldsItem(FieldError fieldsItem) {
-    if (this.fields == null) {
-      this.fields = new ArrayList<>();
-    }
-    this.fields.add(fieldsItem);
-    return this;
-  }
-
-  /**
-   * Get fields
-   * @return fields
-  **/
-  @ApiModelProperty(value = "")
-
-  @Valid
-
-  public List<FieldError> getFields() {
-    return fields;
-  }
-
-  public void setFields(List<FieldError> fields) {
-    this.fields = fields;
-  }
-
 
   @Override
   public boolean equals(java.lang.Object o) {
@@ -108,25 +72,23 @@ public class Error   {
     if (o == null || getClass() != o.getClass()) {
       return false;
     }
-    Error error = (Error) o;
-    return Objects.equals(this.errorCode, error.errorCode) &&
-        Objects.equals(this.message, error.message) &&
-        Objects.equals(this.fields, error.fields);
+    FieldError fieldError = (FieldError) o;
+    return Objects.equals(this.field, fieldError.field) &&
+        Objects.equals(this.message, fieldError.message);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(errorCode, message, fields);
+    return Objects.hash(field, message);
   }
 
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class Error {\n");
+    sb.append("class FieldError {\n");
     
-    sb.append("    errorCode: ").append(toIndentedString(errorCode)).append("\n");
+    sb.append("    field: ").append(toIndentedString(field)).append("\n");
     sb.append("    message: ").append(toIndentedString(message)).append("\n");
-    sb.append("    fields: ").append(toIndentedString(fields)).append("\n");
     sb.append("}");
     return sb.toString();
   }
